external-crates/move/crates/move-compiler/tests/move_2024/parser/named_blocks_invalid_2.move
module 0x42::m {

    fun t0(_cond: bool) {
        'name {
            if (cond) { return 'name 10 };
            20
        }
    }

}
